@@ -5,6 +5,7 @@ core 2.2.0 - not released yet
 	* Feature: Removing valueless foreign records does not require confirmation anymore
 	* Feature: Better support for SQL statements to update fields. Comma is now allowed in type definition (ex: DECIMAL(5,2))
 	* Added: "greaterThan" form validator
+	* Added: Methods for fetching right / section and resp. required right from extension rights matrix
 	* Removed: scal calendar/date picker library
 	* Removed: TodoyuString::replaceOnce()
 	* Removed: TodoyuString::strictHtml2text() is now integrated in html2text() method
